--- a/home/hero-image.html
+++ b/home/hero-image.html
@@ -4,11 +4,12 @@
 		
 
 		<div class="hero-image hero-image--right">
-			{%- include components/amp-img/amp-img.html src="Dustin-Jack-Daniels 2.jpg" alt="A build tool for AMPS on Jekyll"  width="750" height="750" layout="responsive"  -%}
+			{%- include components/amp-img/amp-img.html src="Dustin-Jack-Daniels.jpg" alt="A build tool for AMPS on Jekyll"  width="750" height="750" layout="responsive"  -%}
 		</div>
 
 		<div class="hero-image hero-image--left">
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit ipsam mollitia eligendi, laborum non aut doloremque vel recusandae facere, libero cupiditate rem est iure exercitationem repellendus alias, modi deserunt? Quasi?</p>
+				{%- include components/amp-img/amp-img.html src="open-mike-guild.jpg" alt="A build tool for AMPS on Jekyll"  width="750" height="750" layout="responsive"  -%}
+				{%- include_relative home/guild-event.html -%}
 		</div>
 
 	</div>
