Finish about.html page

--- a/about/about.html
+++ b/about/about.html
@@ -6,7 +6,8 @@ social_image: /about/share.jpg
 type: page
 schema: about
 css: about/about.css
-# nav: navs/nav-sidebar.html
+page_css_class: about-dustin
+
 ---
 
 {%- include_relative description.html -%}
