--- a/about/description.html
+++ b/about/description.html
@@ -1,11 +1,51 @@
 <div class="container reading-width py3 px2">
     <p>
-    This is a build tool that uses gulp, npm, and jekyll.  As such its dependencies are spread a little wider than might be ideal. However this is only to accomodate separating all the scss into files that can be placed with their html to create components that work together and are not tied up into different ways of organizing the stylesheets.  As such the css is completely modular and only global css is not included this way (bass.css, normalize.css, and any styles that you need to reuse across pages).
+      Dustin’s style starts with acoustic pop country music with an alternative sound. His vocal arrangements have been compared to Shawn Mendes, The Killers, Hedley, Coldplay, and David Usher to name a few.
+
+    Recently Dustin recorded a new EP, produced and recorded in Victoria, British Columbia. Dustin is currently playing local pub shows at some of Vancouver Island’s favorite establishments. Dustin knows how to engage an audience, by giving a great performance and the crowd keeps coming back for more.
     </p>
     <p>
-    Recently the AMPS plugin for wordpress has improved greatly.  It accomplishes all of the end results of this build but in a much more graceful way.  It analyzes the DOM to only include css that will affect the page unlike this process where the programmer needs to manually include them.
+    Dustin’s musical experience began at the age of 5 when Dustin began singing alongside his mother, Carole Child, a well-respected musician in British Columbia who has played music across the province.
+    
+    His first tour across Canada took place in 2000. Where Dustin successfully played shows at a wide variety of venues shared by some of the most well known bands in Canada.
+    
+    Dustin is available for co-writing, opening acts, fundraisers, and private events. You can find a sample of Dustin’s music here.
     </p>
-    <p class="supplemental">
-    * rewritting the scss compiling process in ruby to work with githup pages as a plugin would be a cleaner solution.
-    </p>
-</div>
+
+    <div class="one-edge-shadow"></div>
+
+    <div class="clearfix about-content">          
+        <div class="opening-act">
+            <h3>Opening Act For:</h3>
+            <ul >
+                <li>Wide Mouth Mason</li>
+                <li>David Usher</li>
+                <li>Craig Smart</li>
+                <li>Tegan and Sara</li>
+                <li>Joel Plaskett</li>
+                <li>Tom Hooper (Grapes Of Wrath)</li>
+                <li>Mat Johnson (54/40)</li>
+                <li>Rosette</li>
+                <li>Andrew Allen</li>
+                <li>Craig Smart</li>
+            </ul>
+        </div><!-- .opening-act -->
+
+        <div class="one-edge-shadow"></div>
+
+        <div class="venues">
+            <h3 >Venues:</h3>
+            <ul>
+                <li>Roxy Cabaret Bar Vancouver, BC</li>
+                <li>Breakfast Television Halifax, NS 2001</li>
+                <li>Breakfast Television Calgary, AB 2004 – 2006</li>
+                <li>Breakfast television Victoria, BC 2006</li>
+                <li>Bard and Banker Victoria, BC 2016</li>
+                <li>The Irish Times Victoria, BC 2016</li>
+                <li>Lucky Bar Victoria BC 2017</li>
+                <li>Darcy's pub Westshore Victoria BC </li>
+                <li>The Guild Freehouse Pub Victoria BC</li>
+            </ul>
+        </div><!-- .venues -->
+    </div><!-- .about-content -->
+</div><!-- .container -->
