Finish the Contact page

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -15,6 +15,4 @@ amp-bind: yes
 ---
 {%- include_relative form.html -%}
 
-<div class="one-edge-shadow"></div>        
-
-{%- include_relative statement.html -%}
+<div class="spacer py4"></div>
